# racecar_simulator

./: .gitignore  CMakeLists.txt  README.md  collision_log.txt  opponent_racecar.xacro  package.xml  params.yaml  params_pf.yaml  racecar.xacro
config/: params.yaml  rviz_config.rviz
include/lightweight_lidar_only_simulator/: ackermann_kinematics.hpp  distance_transform.hpp  pose_2d.hpp  scan_simulator_2d.hpp
include/racecar_simulator/: ackermann_kinematics.hpp  channel.h  distance_transform.hpp  ks_kinematics.hpp  message_synchronizer.hpp  precompute.hpp  scan_converter.hpp  scan_simulator_2d.hpp  st_kinematics.hpp
launch/: distance_transform_visualizer.launch  distance_transform_visualizer.launch.py  map_robot.rviz  new_simulator.rviz  racecar_model.launch  racecar_model.launch.py  simulate.launch  simulate.launch.py  simulate_light.launch  simulator.launch  simulator.rviz  siumulator_light.rviz
logs/: collision_file.txt
maps/: building_31.yaml  grid_world_2.pgm  grid_world_2.yaml  racetrack.yaml  stata_basement.yaml  track2.pgm  track2.yaml  ucsd_atkinson_1f_full_tuned.pgm  ucsd_atkinson_1f_full_tuned.yaml  ucsd_atkinson_1f_full_tuned_edit.pgm  ucsd_atkinson_1f_full_tuned_edit.yaml  ucsd_atkinson_6f_icra2019_fx_net.pgm  ucsd_atkinson_6f_icra2019_fx_net.yaml
msg/: Collision.msg  SynchronizedSensor.msg
node/: behavior_controller.cpp  copilot_skeleton.cpp  distance_transform_visualizer.cpp  driver_assist.cpp  keyboard.cpp  message_synchronizer.cpp  mux.cpp  random_walk.cpp  random_walker.cpp  safety_copilot.cpp  scan_converter.cpp  simulate.cpp  simulator.cpp
old_files/: Collision.msg  ackermann_kinematics.cpp  copilot_skeleton.cpp  keyop.py  old_racecar_model.launch  opponent_racecar.xacro  safety_copilot.cpp  simulate.cpp  simulate.launch
params/: base_local_planner.yaml  costmap_common_config.yaml  global_costmap_param.yaml  local_costmap_param.yaml
scripts/: twist_to_ackermann.py
src/: ackermann_kinematics.cpp  distance_transform.cpp  ks_kinematics.cpp  precompute.cpp  scan_simulator_2d.cpp  st_kinematics.cpp
